*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.4 ===
* Added built-in presets for some music genres for Parametric Equalizer
  plugin series (contributed by Largos @ linuxmusicians).

=== 1.2.3 ===
* Graphic Toolkit Library lsp-tk-lib has been ported to Windows.
* Updated compressor plugin bundles: added negative boosting gain option in 'Boosting' mode.
* Updated gate plugin bundles: added negative gain option for ducking gateway option.
* Assigned more correct names for sidechain types of dynamic processing plugins.
* Introduced several workarounds for the support of UI by the OBS host.
* Fixed build of i386 DSP code under FreeBSD with Clang compiler.
* Better support of building code for ARMv6, ARMv7 and AArch64 under FreeBSD with Clang compiler.
* Added basic CI tests introduced by GitHub CI.
* Several bugfixes in core libraries.

=== 1.2.2 ===
* Implemented Multiband Dynamic Processor plugin series.
* Changed donation methods.
* Added german translations (contributed by Johannes Guenther).
* Added pitch control for the sample in the Sampler and Multisampler plugin series
  (contributed by Vitalius Kuchalskis).
* Added pitch control for the sample in the Trigger plugin series.
* Fixed plugin version tracking which didn't save the updated version
  to the configuration file.
* Fixed improper configuration file import in JACK headless mode.
* Fixed segmentation fault error in JACK headless mode when JACK connection was lost.
* Added window scaling button function for plugin window.

=== 1.2.1 ===
* Introduced JACK connection status indication for JACK plugin format.
* Improved keyboard event handling for VST2 plugin format in the case the host prevents
  plugins from directly receiving X11 events.
* Updated serialization format of the KVT (Key-Value Tree) for the LV2 plugin format.
* Updated parameter mapping LV2 URI for KVT.